# licode

./: .clang-format  .gitignore  README.md  index.html  package.json  params.json
contrib/: libnice-014.patch2  licode_default.js  log4js_configuration.json
etc/: licode_default.js  log4js_configuration.json
extras/basic_example/: app.js
extras/basic_example/public/: connection_test.js
scripts/: build.sh  daemon.sh  env.sh  gen_config.js  initdb.js  install_deps.sh  install_funcs.sh  kill-all.sh  run-all.sh
src/client/erizo/: .gitignore
src/client/erizo/src/: Events.js  Room.js
src/client/erizo/src/webrtc-stacks/: ChromeStableStack.js  FirefoxStack.js
src/client/erizo/tools/: compile.sh
src/client/nuve/go/: README
src/client/nuve/nodejs/: index.js
src/common/: logger.js  rpc.js  rpc_amqp.js  rpc_nats.js  rpc_nats_test.js  rpc_nsq.js  util.js
src/erizo/addon/: binding.gyp  build.sh
src/erizo/agent/: erizoAgent.js  index.js  launch.sh
src/erizo/controller/: .gitignore  Stream.js  erizoController.js  index.js  roomController.js  rpcPublic.js
src/erizo/controller/erizoAgent/: erizoAgent.js
src/erizo/controller/erizoController/: erizoController.js  roomController.js
src/erizo/controller/erizoJS/: erizoJS.js  erizoJSController.js
src/erizo/liberizo/: CMakeLists.txt
src/erizo/liberizo/src/: CMakeLists.txt
src/erizo/liberizo/src/erizo/: CMakeLists.txt
src/erizo/liberizo/src/test/: CMakeLists.txt
src/erizo/node-erizo/: erizoJS.js  erizoJSController.js  index.js  rpcPublic.js
src/erizo/node-erizo/addon/: CrossCallback.cc  CrossCallback.h  ExternalInput.cc  ExternalInput.h  ExternalOutput.cc  ExternalOutput.h  MediaDefinitions.h  OneToManyProcessor.cc  OneToManyProcessor.h  OneToManyTranscoder.cc  OneToManyTranscoder.h  WebRtcConnection.cc  WebRtcConnection.h  addon.cc  binding.gyp  package.json
src/erizo/node-erizo/test/: index.js
src/liberizo/: AsyncCallback.h  CMakeLists.txt  DtlsTransport.cpp  DtlsTransport.h  MediaDefinitions.h  NiceConnection.cpp  NiceConnection.h  OneToManyProcessor.cpp  OneToManyProcessor.h  SdpInfo.cpp  SdpInfo.h  SrtpChannel.cpp  SrtpChannel.h  Stats.cpp  Stats.h  StringUtil.cpp  StringUtil.h  Transport.h  WebRtcConnection.cpp  WebRtcConnection.h  logger.h
src/liberizo/dtls/: DtlsClient.cpp  DtlsFactory.cpp  DtlsFactory.h  DtlsSocket.cpp  DtlsSocket.h  DtlsTimer.cpp  DtlsTimer.h  OpenSSLInit.cpp  OpenSSLInit.h  bf_dwrap.c  bf_dwrap.h
src/liberizo/examples/: CMakeLists.txt  Test.cpp  Test.h  hsam.cpp
src/liberizo/examples/pc/: Observer.cpp  Observer.h  PCSocket.cpp  PCSocket.h  SDPReceiver.h
src/liberizo/media/: ExternalInput.cpp  ExternalInput.h  ExternalOutput.cpp  ExternalOutput.h  MediaProcessor.cpp  MediaProcessor.h  OneToManyTranscoder.cpp  OneToManyTranscoder.h
src/liberizo/media/codecs/: AudioCodec.cpp  AudioCodec.h  Codecs.h  VideoCodec.cpp  VideoCodec.h
src/liberizo/media/mixers/: VideoMixer.cpp  VideoMixer.h  VideoUtils.cpp  VideoUtils.h
src/liberizo/rtp/: RtcpProcessor.cpp  RtcpProcessor.h  RtpHeaders.h  RtpPacketQueue.cpp  RtpPacketQueue.h  RtpSink.cpp  RtpSink.h  RtpSource.cpp  RtpSource.h  RtpVP8Fragmenter.cpp  RtpVP8Fragmenter.h  RtpVP8Parser.cpp  RtpVP8Parser.h
src/liberizo/test/: CMakeLists.txt  PacketTest.cpp  SdpTest.cpp
src/nuve/: cloudHandler.js  index.js  nuve.js  rpcPublic.js
src/nuve/auth/: mauthParser.js  nuveAuthenticator.js
src/nuve/ch_policies/: default_policy.js
src/nuve/mdb/: dataBase.js  roomRegistry.js  serviceRegistry.js  tokenRegistry.js
src/nuve/resource/: roomResource.js  roomsResource.js  serviceResource.js  servicesResource.js  tokensResource.js  userResource.js  usersResource.js
src/nuve/rpc/: rpc.js  rpcPublic.js
src/nuve/test/: db.js  room_test.js  token_test.js
